# kube-log-viewer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  Taskfile.yml
.github/workflows/: ci.yml  release.yml
crates/kube-log-cli/: Cargo.toml
crates/kube-log-cli/src/: cli.rs  complete.rs  main.rs  output.rs
crates/kube-log-core/: Cargo.toml
crates/kube-log-core/src/: classify.rs  export.rs  filter.rs  lib.rs  parse.rs  reduce.rs  types.rs
crates/kube-log-core/src/k8s/: contexts.rs  logs.rs  pods.rs
crates/kube-log-tui/: Cargo.toml
crates/kube-log-tui/src/: app.rs  event.rs  lib.rs  main.rs
crates/kube-log-tui/src/ui/: header.rs  logs.rs  pods.rs  popup.rs  theme.rs
crates/kube-log-tui/tests/: integration.rs
docs/rationale/: 0001_application_design.md  0002_error_handling_and_auth.md  0003_json_log_formatting.md  0004_relative_timestamps.md  0005_pod_auto_refresh.md  0006_multi_stream.md  0007_llm_cli_dual_interface.md
src/: app.rs  event.rs  lib.rs  main.rs  prefs.rs
src/k8s/: contexts.rs  logs.rs  mod.rs  namespaces.rs  pods.rs
src/ui/: header.rs  logs.rs  mod.rs  pods.rs  popup.rs  statusbar.rs  theme.rs
tests/: integration.rs
