[package]
name = "kube-log-viewer"
version = "0.1.0"
edition = "2024"
description = "A terminal UI for streaming and searching Kubernetes pod logs"

[[bin]]
name = "kube-log-viewer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["v1_32"] }
kube = { version = "3.0.1", features = ["client", "config", "rustls-tls"] }
ratatui = "0.30.0"
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
dirs = "6.0.0"
