[package]
name = "kube-log-cli"
version = "0.5.1"
edition = "2024"
description = "LLM-facing CLI for Kubernetes log analysis with anomaly detection"

[[bin]]
name = "kube-log"
path = "src/main.rs"

[dependencies]
kube-log-core = { path = "../kube-log-core" }
anyhow = "1.0.102"
jiff = "0.2.23"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
