[package]
name = "kube-log-tui"
version = "0.5.0"
edition = "2024"
description = "A terminal UI for streaming and searching Kubernetes pod logs"

[[bin]]
name = "kube-log-viewer"
path = "src/main.rs"

[dependencies]
kube-log-core = { path = "../kube-log-core" }
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["v1_32"] }
kube = { version = "3.0.1", features = ["client", "config", "runtime", "rustls-tls"] }
libc = "0.2.182"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.0.4"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
